--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "mongodb": "^2.2.30",
+    "node-dash-button": "^0.6.1",
     "path": "^0.12.7",
     "play-sound": "^1.1.1"
   },
